--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Sunayana Prasanna Rao</h1>
+            <div><a href="mailto:sunayanaprao@outlook.com">sunayanaprao@outlook.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/sunayana-01">@github_handle</a></li>
+                    <li><a href="https://linkedin.com/in/sunayana-rao-4274531b9/">@linkedin_handle</a></li>
+                    <li><a href="https://twitter.com/heyoitsmee01">@twitter_handle</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Bangalore Institute Of Technology
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Major: Computer Science Engineering</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>GPA: 9.5</li>
+                        <li>2nd Year</li>
                     </ul>
                 </div>
             </section>
@@ -52,6 +52,9 @@
                     <li>JavaScript</li>
                     <li>Git</li>
                     <li>Visual Studio Code</li>
+                    <li>Java</li>
+                    <li>C++</li>
+                    <li>C</li>
                 </ul>
             </section>
         </article>
