--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/sunayana-01">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/sunayana-rao-4274531b9/">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/heyoitsmee01">@twitter_handle</a></li>
+                    <li><a href="https://github.com/sunayana-01">sunayana-01</a></li>
+                    <li><a href="https://linkedin.com/in/sunayana-rao-4274531b9/">Sunayana Rao</a></li>
+                    <li><a href="https://twitter.com/heyoitsmee01">heyoitsmee01</a></li>
                 </ul>    
             </section>
             
@@ -35,7 +35,7 @@
                     </h2>
                     <h3>Major: Computer Science Engineering</h3>
                     <ul>
-                        <li>GPA: 9.5</li>
+                        <li>SGPA: 9.5</li>
                         <li>2nd Year</li>
                     </ul>
                 </div>
@@ -62,24 +62,25 @@
             <section class="box">
                 <h2>
                     <i class="fa fa-briefcase" aria-hidden="true"></i>
-                    Experience
+                    Activities
                 </h2>
-                <h3>Microsoft Learn Student Ambassador</h3>
+                <!---h3>Microsoft Learn Student Ambassador</h3>--->
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Microsoft Learn Student Ambassador</li>
+                    <li>Domain Head Of Competitive programming, SDI(College Club)</li>
+                    <li>Igniter, D2C(College Club)</li>
                 </ul>
             </section>
             <section class="box">
                 <h2>
-                    <i class="fa fa-building" aria-hidden="true"></i>
-                    Internships
+                    <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+                    Achievements
                 </h2>
 
-                <h3>Company name</h3>
+                <!---<h3>Company name</h3>--->
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Secured 4th place in Intra-school C competition. (2017)</li>
+                    <li>3 starts on Codechef.</li>
                 </ul>
             </section>
             <section class="box">
@@ -88,11 +89,12 @@
                     Projects
                 </h2>
                 
-                <h3>Great hackathon</h3>
-                <div>This was a great hack!</div>
+                <!---<h3>Great hackathon</h3>
+                <div>This was a great hack!</div>--->
                 <ul>
-                    <li>Cool technology used</li>
-                    <li>Prize won</li>
+                    <li>Airoplane Route Finder (Java)</li>
+                    <li>Shortest Route Finder (Java)</li>
+                    <li>Shopping Website App (HTML, CSS, JS)</li>
                 </ul>
             </section>
         </article>
