--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/sunayana-01">sunayana-01</a></li>
-                    <li><a href="https://linkedin.com/in/sunayana-rao-4274531b9/">Sunayana Rao</a></li>
-                    <li><a href="https://twitter.com/heyoitsmee01">heyoitsmee01</a></li>
+                    <i class="fa fa-github" aria-hidden="true"></i><a href="https://github.com/sunayana-01">sunayana-01</a></ul></br>
+                    <i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://linkedin.com/in/sunayana-rao-4274531b9/">Sunayana Rao</a></br>
+                    <i class="fa fa-twitter" aria-hidden="true"></i><a href="https://twitter.com/heyoitsmee01">heyoitsmee01</a></br>
                 </ul>    
             </section>
             
@@ -33,11 +33,10 @@
                         <i class="fa fa-certificate" aria-hidden="true"></i>
                         Bangalore Institute Of Technology
                     </h2>
-                    <h3>Major: Computer Science Engineering</h3>
-                    <ul>
-                        <li>SGPA: 9.5</li>
-                        <li>2nd Year</li>
-                    </ul>
+                    <h3>Major: Computer Science Engineering</h3></br>
+                        2020-2024</br>
+                        SGPA: 9.5
+                        2nd Year
                 </div>
             </section>
 
